minor changes in html and fix gif visibility in small device n_n

--- a/src/style.css
+++ b/src/style.css
@@ -559,19 +559,23 @@ footer {
 
 @media screen and (max-width:600px) {
     #navbar-logo-img {
-    width:70%;
+    width:30%;
     }
     }
   
+@media screen and (max-width:570px) {
+    #navbar-banner-img{
+        width:70%;
+    }}
   @media screen and (max-width:480px) {
    .navbar-top {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background-color:#4f72a7;
+     
       color: white;
   }
-  
+ 
   .filters-container {
       margin:0 auto;
       padding:0 5px;
